--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ keywords = ["qtum", "blockchain"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+basex-rs = "0.1.1"
+bitcoin_hashes = "0.7.5"
+hex = "0.4.2"
